--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,13 @@ email-validator==2.0.0.post2
 exceptiongroup==1.1.3
 fastapi==0.103.2
 greenlet==3.0.0
+gunicorn==21.2.0
 h11==0.14.0
 httptools==0.6.0
 idna==3.4
 Mako==1.2.4
 MarkupSafe==2.1.3
+packaging==23.2
 passlib==1.7.4
 psycopg2-binary==2.9.9
 pyasn1==0.5.0
