--- a/.github/workflows/buid-deploy.yml
+++ b/.github/workflows/buid-deploy.yml
@@ -1,9 +1,9 @@
-name: buid and deploy code
-on: [push, pull_requests]
+name: build and deploy code
+on: [push, pull_request]
 
 jobs:
   job1:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
         uses: actions/checkout@v4
