--- a/.github/workflows/buid-deploy.yml
+++ b/.github/workflows/buid-deploy.yml
@@ -8,4 +8,4 @@ jobs:
       - name: pulling git repo
         uses: actions/checkout@v4
       - name: say hi jeeva
-        run: echo "hello jeeva"
+        run: echo "hello learner"
