--- a/.github/workflows/buid-deploy.yml
+++ b/.github/workflows/buid-deploy.yml
@@ -7,5 +7,12 @@ jobs:
     steps:
       - name: pulling git repo
         uses: actions/checkout@v4
-      - name: say hi jeeva
-        run: echo "hello learner"
+      - name: Install python version 3.10
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
+
+      - name: update pip
+        run: python -m pip install --upgrade pip
+      - name: Install all dependencies
+        run: pip install -r requirements.txt
