--- a/.github/workflows/buid-deploy.yml
+++ b/.github/workflows/buid-deploy.yml
@@ -32,3 +32,5 @@ jobs:
         run: |
           pip install pytest
           pytest
+      - name: just prints the name
+        uses: echo "Hello jeeva"
